# Snake

./: CMakeLists.txt  Gamesnake.cpp  Gamesnake.h  main.cpp
game_elements/: Field.cpp  Field.h  Fruits.cpp  Fruits.h  Menu.cpp  Menu.h  Snake.cpp  Snake.h
